# CUDA_visualization

./: .gitignore  pyproject.toml
backend/: cuda_bindings.go  cuda_example.go  go.mod  go.sum  main.go  maxmul.cu  maxmul.go  package-lock.json  package.json  run.sh  vector_add.cu
backend/cuda_files/: fourier_transform.cu
backend/src/: index.js
backend/src/controllers/: algorithmController.js  g4f_fetch_results.py
backend/src/routes/: algorithmRoutes.js
frontend/: chart.js  package-lock.json  package.json
frontend/src/: App.css  App.js  setupProxy.js
frontend/src/components/: AlgorithmForm.css  AlgorithmForm.js  AlgorithmResults.js
frontend/src/pages/: Dashboard.css  Dashboard.js
frontend/src/services/: api.js
