[tool.poetry]
name = "cuda-visualization"
version = "0.1.0"
description = ""
authors = ["ZigaMr <ziga.mrzljak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
g4f = "^0.2.7.2"
curl-cffi = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
